Change API name and Node Version

--- a/serverless.yml
+++ b/serverless.yml
@@ -1,8 +1,9 @@
-service: my-express-application
+service: 
+  name: PlanrrDesiro
 
 provider:
   name: aws
-  runtime: nodejs6.10
+  runtime: nodejs8.10
   stage: dev
   region: eu-west-1
 
