--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "serverless-http": "^1.8.0"
   },
   "devDependencies": {
+    "serverless-domain-manager": "^2.6.13",
     "serverless-offline": "^3.31.3"
   }
 }
