--- a/serverless.yml
+++ b/serverless.yml
@@ -21,53 +21,31 @@ provider:
 
 functions:
 
-  stationArrivals:
+  stationBoard:
     handler: index.handler
     events:
       - http: 
-          path: /station/{stationCode}/arrivals
+          path: /station/{stationCode}/{direction}
           method: GET
-          private: true
+          private: false
           request:
             parameters:
               paths:
                 stationCode: true
+                direction: true
       - http: 
-          path: /station/{stationCode}/arrivals/{year}/{month}/{day}/{time}
+          path: /station/{stationCode}/{direction}/{year}/{month}/{day}/{time}
           method: GET
-          private: true
+          private: false
           request:
             parameters:
               paths:
                 stationCode: true
+                direction: true
                 year: false
                 month: false
                 day: false
                 time: false
-
-  stationDepartures:
-    handler: index.handler
-    events:
-      - http: 
-          path: /station/{stationCode}/departures
-          method: GET
-          private: true
-          request:
-            parameters:
-              paths:
-                stationCode: true
-      - http: 
-          path: /station/{stationCode}/departures/{year}/{month}/{day}/{time}
-          method: GET
-          private: true
-          request:
-            parameters:
-              paths:
-                stationCode: true
-                year: true
-                month: true
-                day: true
-                time: true
 
   stationList:
     handler: index.handler
