--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "elasticsearch": "^15.3.0",
     "express": "^4.16.4",
     "luxon": "^1.10.0",
