--- a/serverless.yml
+++ b/serverless.yml
@@ -26,6 +26,7 @@ functions:
       - http: 
           path: /
           method: GET
+          cors: true
           private: true
           
   stationBoard:
@@ -34,6 +35,7 @@ functions:
       - http: 
           path: /station/{stationCode}/{direction}
           method: GET
+          cors: true
           private: true
           request:
             parameters:
@@ -43,6 +45,7 @@ functions:
       - http: 
           path: /station/{stationCode}/{direction}/{year}/{month}/{day}/{time}
           method: GET
+          cors: true
           private: true
           request:
             parameters:
@@ -60,6 +63,7 @@ functions:
       - http: 
           path: /station/list
           method: GET
+          cors: true
           private: true
 
   trainService:
@@ -68,6 +72,7 @@ functions:
       - http: 
           path: /train/{uid}/{year}/{month}/{day}
           method: GET
+          cors: true
           private: true
 
 custom:
